--- a/3bookstore/templates/_base.html
+++ b/3bookstore/templates/_base.html
@@ -47,7 +47,7 @@
 
         {% if user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
+          <a class="nav-link" href="{% url 'book_list' %}">All Books</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-danger fw-semibold" href="{% url 'account_logout' %}">Log Out</a>
