--- a/3bookstore/books/templates/books/book_details.html
+++ b/3bookstore/books/templates/books/book_details.html
@@ -5,6 +5,11 @@
 {% block content %}
 
 <div class="book-detail">
+  {% if book.cover %}
+  <img class="bookcover" src="{{ book.cover.url}}" alt="{{ book.title }}">
+  {% else %}
+  <p>cover is not available</p>
+  {% endif %}
   <h2>{{ book.title }}</h2>
   <p>Author: {{ book.author }}</p>
   <p>Price: {{ book.price }}</p>
